--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "titanium-es",
   "version": "1.0.0",
   "description": "Generates a modern ECMAScript wrapper for Titanium API",
-  "main": "index.js",
+  "main": "src/index.js",
   "dependencies": {
     "ejs": "^3.0.1",
     "fs-extra": "^8.1.0"
