--- a/package.json
+++ b/package.json
@@ -1,9 +1,11 @@
 {
   "name": "titanium-es",
-  "version": "1.0.5",
+  "version": "1.0.6",
   "description": "Generates a modern ECMAScript wrapper for Titanium API",
   "main": "src/index.js",
   "dependencies": {
+    "@babel/core": "^7.8.3",
+    "@babel/preset-env": "^7.8.3",
     "ejs": "^3.0.1",
     "fs-extra": "^8.1.0"
   },
